<package>
  <name>barometer_bmp388</name>
  <version>1.1.0</version>
  <description>
     None
  </description>

  <maintainer email="hzhuge001@e.ntu.edu.sg">Zhuge Huayang</maintainer>

  <license>BSD</license>

  <author>Zhuge Huayang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>python-serial</run_depend>

</package>


